[package]
name = "ftl"
version = "0.2.5"
edition = "2021"

[lib]
crate_type = ["cdylib"]
test = false
bench = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
webrtc-unreliable = { path = "./webrtc-unreliable" }
url = { version = "2.2.2" }
serde_json = "1.0"
futures-channel = { version = "0.3", features = ["sink"] }
futures-util = { version = "0.3", features = ["sink"] }
smol = { version = "1.2.4" }
once_cell = { version = "1.4.1" }
flume = "0.10.13"
num_cpus = "1.13.1"
kanal = {version = "0.1.0-pre1", features = ["async"]}

[profile.release]
strip = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 16
rpath = false


[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true
overflow-checks = true
panic = "abort"
incremental = true
codegen-units = 1

