[package]
name = "ftl"
version = "0.2.6"
edition = "2021"

[lib]
crate_type = ["cdylib"]
test = false
bench = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
unreliablertc = { path = "./unreliablertc" }
url = { version = "2.3" }
serde_json = "1.0"
futures-util = { version = "0.3", features = ["sink"] }
smol = { version = "1.3" }
once_cell = { version = "1.16" }
flume = "0.10.14"
num_cpus = "1.14"

[profile.release]
strip = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 16
rpath = false


[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true
overflow-checks = true
panic = "abort"
incremental = true
codegen-units = 1

